--- a/.github/workflows/deploy-to-vps-dev.yml
+++ b/.github/workflows/deploy-to-vps-dev.yml
@@ -9,8 +9,8 @@ jobs:
       - name: Clone Repository
         uses: actions/checkout@v3
       
-      - name: NPM Install
-        run: npm install
+      # - name: NPM Install
+      #   run: npm install
 
       - name: Deno Install
         run: curl -fsSL https://deno.land/x/install/install.sh | sh
