--- a/.github/workflows/deploy-to-vps-dev.yml
+++ b/.github/workflows/deploy-to-vps-dev.yml
@@ -12,14 +12,17 @@ jobs:
       # - name: NPM Install
       #   run: npm install      
 
-      - name: Unzip Install
-        run: sudo apt install unzip
+      - name: Install Deno
+        uses: maximousblk/setup-deno@v2
+
+      # - name: Unzip Install
+      #   run: sudo apt install unzip
       
-      - name: Deno Install
-        run: curl -fsSL https://deno.land/x/install/install.sh | sh
+      # - name: Deno Install
+      #   run: sudo curl -fsSL https://deno.land/x/install/install.sh | sh
 
       - name: Deno Version
-        run:  deno --version
+        run:  deno -V
 
       - name: Deno Build
         run: deno compile --allow-read --allow-net --output dest/app main.ts
